--- a/Todolist9/src/main/resources/templates/todoList.html
+++ b/Todolist9/src/main/resources/templates/todoList.html
@@ -6,7 +6,8 @@
 <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
 </head>
 <body>
-  ${#locale.language}=<span th:text="${#locale.language}"></span>
+  <!-- 操作メッセージエリア -->
+  <div th:replace="~{fragments :: msg_area}"></div>
   <form th:action="@{/}" method="post" th:object="${todoQuery}">
     <!-- 検索条件入力エリア -->
     <div style="display: flex">
